# initial_emulator

./: .gitignore  .~lock.Design Document.odt#  CMakeLists.txt  Design Document.odt  Makefile  README.md  Zenith80.fzz  bitbucket-pipelines.yml  config.h.in  libs_build.sh  project.geany  zenith80.geany
asm/: fibonnaci.asm  test.asm  zenith.asm  zexall.z80
include/: defines.hpp  gimp_image.h  main.hpp  program.hpp  zenith80.hpp
include/CPU/: Z80.hpp  Z80Device.hpp  Z80Memory.hpp  opcodes.hpp  registers.hpp
include/CPU/peripherals/: DeviceController.hpp  GenericDevice.hpp  Keyboard.hpp  RAMController.hpp  Z80Controller.hpp
include/GPU/: GR80.hpp
include/asm/: data.inc  keyboard.inc
include/assets/: icon.hpp
include/assets/fonts/: Famirids.h  Pacifico.hpp  Serif.hpp
include/debugger/: main.hpp
include/fonts/: AlphaMaleModern.h
libs/lib/: libsfml-audio.so.2.4.2  libsfml-graphics.so.2.4.2  libsfml-network.so.2.4.2  libsfml-system.so.2.4.2  libsfml-window.so.2.4.2  libtgui.so.0.8.0
programs/asm/: a.asm  about.asm  data.inc  fc2.asm  first_run.asm  input.asm  load_game.asm  main_game.asm  menu.asm  new_game.asm  output.asm  quit.asm  rise.bin.pmem  save.asm  settings.asm  shared_strings.asm
programs/asm/screens/: screen0.asm  screen1.asm  screen2.asm  screens.asm
programs/asm/screens/intro/: awaken.asm  cell.asm  intro.asm  numbskull.asm  toyourfeet.asm
scripts/: build_zmac
src/: CMakeLists.txt  icon.c  test.z80  zenith-2.asm  zenith.asm  zenith80.cpp
src/CPU/: CMakeLists.txt  Z80.cpp  opcodes.cpp
src/CPU/opcodes/: CB.cpp  DD.cpp  DDCB.cpp  ED.cpp  FD.cpp  FDCB.cpp  main.cpp
src/CPU/peripherals/: CMakeLists.txt  DeviceController.cpp  GenericDevice.cpp  Keyboard.cpp  RAMController.cpp  RAMControllerNew.cpp  Screen.cpp  Z80Controller.cpp
src/GPU/: CMakeLists.txt  GR80.cpp  a.cpp
src/assets/: AlphaMaleModern.cpp  AstronBoyWonder.cpp  CMakeLists.txt  Famirids.cpp  NEUROPOL.cpp  Pacifico-Regular.cpp  Serif.c  icon.cpp
src/debugger/: CMakeLists.txt  debugger.cpp
